# ai-chatbot-slack

./: .eslintrc.js  .gitignore  .secretlintignore  LICENSE  README.md  aws-accounts.json  cspell.json  package-lock.json  package.json  tsconfig.json
iac/: cdk.json  package.json
iac/lib/: main-stack.ts
server/: Dockerfile  app.py  pyproject.toml  requirements.txt  slack_bot_handler.py
server/scripts/: .env.example  index_documents.py
server/server/: rag.py
