[tool.poetry]
name = "server"
version = "0.0.0"
description = ""
authors = ["tanimon <8575113+tanimon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
slack-bolt = "^1.18.1"
langchain = "^0.1.17"
langchain-aws = "^0.1.2"
boto3 = "^1.34.97"
open-interpreter = "^0.2.5"
litellm = "^1.40.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
