[tool.poetry]
name = "server"
version = "0.0.0"
description = ""
authors = ["tanimon <8575113+tanimon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
slack-bolt = "^1.18.1"
boto3 = "^1.34.97"
langchain-aws = "^0.1.6"
langchain-core = "^0.2.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
beautifulsoup4 = "^4.12.3"
langchainhub = "^0.1.16"
requests = "^2.32.3"
requests-aws4auth = "^1.2.3"
opensearch-py = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
boto3-stubs = {extras = ["boto3"], version = "^1.34.122"}
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
